--- a/app.wxss
+++ b/app.wxss
@@ -3,3 +3,7 @@ page {
   min-height: 100vh;
   background-color: #f8f8f8;
 }
+
+view, text, image, scroll-view, navigator, swiper, swiper-item {
+  box-sizing: border-box;
+}
