feat: 直播、短视频列表

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -21,6 +21,8 @@
     <view class="content-wrap" style="padding-top: {{statusBarHeight + 102}}px;">
       <strategy-item />
       <note-item />
+      <live-item />
+      <video-item />
     </view>
   </swiper-item>
 </swiper>
