--- a/pages/index/components/note-item/index.wxml
+++ b/pages/index/components/note-item/index.wxml
@@ -4,14 +4,14 @@
     <view class="title-wrap">
       <view class="address">游记 · 千岛湖</view>
       <view class="title">
-        <text class="title-content">拖家带口五天玩转杭州千岛湖乌镇拖家带口五天玩转杭州千岛湖乌镇拖家带口五天玩转杭州千岛湖乌镇</text>
+        <text class="title-content omit">拖家带口五天玩转杭州千岛湖乌镇拖家带口五天玩转杭州千岛湖乌镇拖家带口五天玩转杭州千岛湖乌镇</text>
       </view>
     </view>
   </view>
   <view class="info-wrap">
     <view class="author-info">
       <image class="avatar" src="/images/avatar.jpeg" />
-      <text class="name">funguy</text>
+      <text class="name omit single-line">funguy</text>
     </view>
     <view class="read-info">
       <image class="read-icon" src="./images/eye.png" />
