--- a/pages/index/components/note-item/index.wxss
+++ b/pages/index/components/note-item/index.wxss
@@ -25,7 +25,7 @@
   color: #fff;
   font-size: 20rpx;
   border-radius: 10rpx 10rpx 0 0;
-  background: #77a9fd;
+  background: var(--theme-gradient-color);
 }
 .title {
   padding: 10rpx;
@@ -35,11 +35,6 @@
 .title-content {
   color: #333;
   font-size: 26rpx;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
 }
 
 .info-wrap {
@@ -65,11 +60,6 @@
 }
 .name {
   flex: 1;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 1;
-  -webkit-box-orient: vertical;
 }
 .read-info {
   display: flex;
