--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -6,7 +6,7 @@
     </view>
   </view>
   <view class="search-bar {{navrBarActive ? 'active': ''}}" ontap="search">
-    <view class="placeholder">搜索景点、酒店、攻略等</view>
+    <view class="placeholder">搜索攻略、游记等</view>
     <view class="search-btn">
       <image style="width: 20px; height: 20px;" src="./images/search.png" />
     </view>
