--- a/pages/mall/index.wxml
+++ b/pages/mall/index.wxml
@@ -5,4 +5,34 @@
   </view>
 </view>
 
-<view class="container"></view>
+<swiper class="banner" style="height: calc({{statusBarHeight + 44}}px + 250rpx);" autoplay indicator-dots circular>
+  <swiper-item class="banner-item">
+    <image class="banner-img" mode="widthFix" src="/images/banner.png" />
+  </swiper-item>
+  <swiper-item>
+    <image class="banner-img" mode="widthFix" src="/images/banner_1.png" />
+  </swiper-item>
+</swiper>
+
+<view class="category-wrap">
+  <view class="category-item">
+    <image class="category-icon" src="./images/ticket.png" />
+    <view class="category-desc">景点门票</view>
+  </view>
+  <view class="category-item">
+    <image class="category-icon" src="./images/bus.png" />
+    <view class="category-desc">跟团游</view>
+  </view>
+  <view class="category-item">
+    <image class="category-icon" src="./images/hotel.png" />
+    <view class="category-desc">酒店民宿</view>
+  </view>
+  <view class="category-item">
+    <image class="category-icon" src="./images/foot.png" />
+    <view class="category-desc">餐饮美食</view>
+  </view>
+  <view class="category-item">
+    <image class="category-icon" src="./images/cart.png" />
+    <view class="category-desc">特色商品</view>
+  </view>
+</view>
