--- a/pages/mall/index.wxml
+++ b/pages/mall/index.wxml
@@ -7,10 +7,10 @@
 
 <swiper class="banner" style="height: calc({{statusBarHeight + 44}}px + 250rpx);" autoplay indicator-dots circular>
   <swiper-item class="banner-item">
-    <image class="banner-img" mode="widthFix" src="/images/banner.png" />
+    <image class="banner-img" mode="widthFix" src="http://img.ubo.vip/youlian/temporary/banner.png" />
   </swiper-item>
   <swiper-item>
-    <image class="banner-img" mode="widthFix" src="/images/banner_1.png" />
+    <image class="banner-img" mode="widthFix" src="http://img.ubo.vip/youlian/temporary/banner_1.png" />
   </swiper-item>
 </swiper>
 
