--- a/pages/index/components/live-item/index.wxml
+++ b/pages/index/components/live-item/index.wxml
@@ -1,6 +1,6 @@
 <view class="live-item">
   <view class="cover-wrap">
-    <image class="cover" mode="widthFix" src="/images/item_cover_3.jpg" />
+    <image class="cover" mode="widthFix" src="http://img.ubo.vip/youlian/temporary/item_cover_3.jpg" />
     <view class="live-symbol">
       <image class="live-icon" src="./images/live.gif" />
       <text>直播</text>
@@ -13,7 +13,7 @@
   <view class="title omit">千岛湖3天骑车、皮划艇、游泳和吃吃吃，千岛湖3天骑车、皮划艇、游泳和吃吃吃，千岛湖3天骑车、皮划艇、游泳和吃吃吃</view>
   <view class="info-wrap">
     <view class="author-info">
-      <image class="avatar" src="/images/avatar.jpeg" />
+      <image class="avatar" src="http://img.ubo.vip/youlian/temporary/avatar.jpeg" />
       <text class="name omit single-line">花束情人花束情人花束情人花束情人花束情人花束情人花束情人</text>
     </view>
     <view class="praise-info">
