--- a/pages/index/components/strategy-item/index.wxml
+++ b/pages/index/components/strategy-item/index.wxml
@@ -1,6 +1,6 @@
 <view class="strategy-item">
   <view class="cover-wrap">
-    <image class="cover" mode="widthFix" src="/images/item_cover.jpeg" />
+    <image class="cover" mode="widthFix" src="http://img.ubo.vip/youlian/temporary/item_cover.jpeg" />
     <view class="address-info">
       <image class="address-icon" src="./images/address.png" />
       <text class="address-detail omit single-line">千岛湖绿城度假酒店千岛湖绿城度假酒店</text>
@@ -9,7 +9,7 @@
   <view class="title omit">攻略千岛湖3天骑车、皮划艇、游泳和吃吃吃，千岛湖3天骑车、皮划艇、游泳和吃吃吃，千岛湖3天骑车、皮划艇、游泳和吃吃吃</view>
   <view class="info-wrap">
     <view class="author-info">
-      <image class="avatar" src="/images/avatar.jpeg" />
+      <image class="avatar" src="http://img.ubo.vip/youlian/temporary/avatar.jpeg" />
       <text class="name omit single-line">花束情人花束情人花束情人花束情人花束情人花束情人花束情人</text>
     </view>
     <view class="praise-info">
