--- a/app.wxss
+++ b/app.wxss
@@ -3,7 +3,8 @@ page {
   min-height: 100vh;
   background-color: #f8f8f8;
   --theme-color: #77a9fd;
-  --theme-gradient-color: linear-gradient(90deg, #6097f7 0%, #86abeb 100%);
+  --theme-color-gradient: linear-gradient(90deg, #6097f7 0%, #86abeb 100%);
+  --theme-color-btn-bg: linear-gradient(90deg, #00cffc 0%, #0095fa 100%);
 }
 
 view, text, image, scroll-view, navigator, swiper, swiper-item {
@@ -19,4 +20,21 @@ view, text, image, scroll-view, navigator, swiper, swiper-item {
 }
 .omit.single-line {
   -webkit-line-clamp: 1;
+}
+
+.small-dots .wx-swiper-dot {
+  width: 10rpx;
+  height: 10rpx;
+}
+
+.custom-dots .wx-swiper-dot {
+  width: 8rpx;
+  height: 8rpx;
+  border-radius: 4rpx;
+  background: var(--theme-color);
+  opacity: 0.5;
+}
+.custom-dots .wx-swiper-dot.wx-swiper-dot-active {
+  width: 24rpx;
+  opacity: 1;
 }
