feat: 攻略详情列表

--- a/pages/index/subpages/strategy/components/strategy-item/index.wxml
+++ b/pages/index/subpages/strategy/components/strategy-item/index.wxml
@@ -50,7 +50,7 @@
         <view class="btn-data">200</view>
       </view>
       <view class="btn-item">
-        <image class="btn-icon" src="./images/collection.png" />
+        <image class="btn-icon" src="./images/collection-active.png" />
         <view class="btn-data">200</view>
       </view>
     </view>
