--- a/pages/mall/index.wxml
+++ b/pages/mall/index.wxml
@@ -1,6 +1,6 @@
 <view class="nav-bar {{navrBarActive ? 'active': ''}}" style="padding-top: {{statusBarHeight}}px">
   <view class="search-bar {{navrBarActive ? 'active': ''}}" ontap="search">
-    <image class="search-icon" src="./images/search.png" />
+    <image class="search-icon" src="/images/search.png" />
     <text class="placeholder">搜索景点、酒店等</text>
   </view>
 </view>
