--- a/pages/mall/subpages/ticket/index.wxml
+++ b/pages/mall/subpages/ticket/index.wxml
@@ -1,3 +1,5 @@
+<wxs module="DROPDOWN" src="/utils/filters/dropdownVisible.wxs" />
+
 <view class="nav-bar" style="padding-top: {{statusBarHeight}}px;">
   <view class="search-bar-wrap">
     <image class="back-icon" src="/images/back.png" ontap="navBack" />
@@ -7,35 +9,25 @@
     </view>
   </view>
   <view class="search-filter">
-    <view class="filter-item {{categoryOptionsDropdownVisible ? 'active' : ''}}" ontap="showCategoryOptionsDropdown">
-      <text>{{categoryOptions[curCategoryOptionIdx]}}</text>
-      <image class="filter-icon {{categoryOptionsDropdownVisible ? 'active' : ''}}" src="/images/arrow.png" />
-    </view>
-    <view class="filter-item {{sortOptionsDropdownVisible ? 'active' : ''}}" ontap="showSortOptionsDropdown">
-      <text>{{sortOptions[curSortOptionIdx]}}</text>
-      <image class="filter-icon {{sortOptionsDropdownVisible ? 'active' : ''}}" src="/images/arrow.png" />
+    <view wx:for="{{filterList}}" wx:key="index" class="filter-item {{item.visible ? 'active' : ''}}" ontap="showDropdown" data-index="{{index}}">
+      <text>{{(item.curIndex === 0 && item.title) ? item.title : item.options[item.curIndex]}}</text>
+      <image class="filter-icon {{item.visible ? 'active' : ''}}" src="/images/arrow.png" />
     </view>
   </view>
 </view>
 
-<view class="mask" wx:if="{{categoryOptionsDropdownVisible || sortOptionsDropdownVisible}}" ontap="hideDropdown"/>
-<view class="filter-options {{categoryOptionsDropdownVisible ? 'show' : ''}}" style="top: {{statusBarHeight + 88}}px;">
-  <view class="option" wx:for="{{categoryOptions}}" wx:key="index" ontap="selectCategoryOption" data-index="{{index}}">
-    <view class="option-name {{curCategoryOptionIdx === index ? 'active' : ''}}">{{item}}</view>
-    <image class="selected-icon" wx:if="{{curCategoryOptionIdx === index}}" src="/images/selected.png" />
-  </view>
-</view>
-<view class="filter-options {{sortOptionsDropdownVisible ? 'show' : ''}}" style="top: {{statusBarHeight + 88}}px;">
-  <view class="option" wx:for="{{sortOptions}}" wx:key="index" ontap="selectSortOption" data-index="{{index}}">
-    <view class="option-name {{curSortOptionIdx === index ? 'active' : ''}}">{{item}}</view>
-    <image class="selected-icon" wx:if="{{curSortOptionIdx === index}}" src="/images/selected.png" />
+<view class="mask" wx:if="{{DROPDOWN.visible(filterList)}}" ontap="hideDropdown"/>
+<view wx:for="{{filterList}}" wx:key="index" class="filter-options {{item.visible ? 'show' : ''}}" style="top: {{statusBarHeight + 88}}px;">
+  <view class="option" wx:for="{{item.options}}" wx:key="index" wx:for-index="_index" wx:for-item="option" ontap="selectOption" data-filter-index="{{index}}" data-option-index="{{_index}}">
+    <view class="option-name {{item.curIndex === _index ? 'active' : ''}}">{{option}}</view>
+    <image class="selected-icon" wx:if="{{item.curIndex === _index}}" src="/images/selected.png" />
   </view>
 </view>
 
 <view class="container" style="padding-top: {{statusBarHeight + 88}}px;">
   <view class="ticket-list" >
-    <ticket-item class="i-ticket-item" />
-    <ticket-item class="i-ticket-item" />
-    <ticket-item class="i-ticket-item" />
+    <ticket-item />
+    <ticket-item />
+    <ticket-item />
   </view>
 </view>
