--- a/pages/common/register/index.wxss
+++ b/pages/common/register/index.wxss
@@ -1,13 +1,24 @@
 .login-wrap {
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: #000;
+  background: #fff;
 }
 .bg {
   position: absolute;
   width: 100%;
+  bottom: 0;
 }
+.back-icon-wrap {
+  position: absolute;
+  left: 8px;
+  display: flex;
+  align-items: center;
+  height: 34px;
+}
+
 .weixin-btn {
   position: absolute;
   left: 50%;
