--- a/pages/common/register/index.wxml
+++ b/pages/common/register/index.wxml
@@ -3,11 +3,22 @@
   <view class="back-icon-wrap" style="top: {{statusBarHeight + 5}}px">
     <i-back-icon />
   </view>
-  <button class="weixin-btn" open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber">立即登录</button>
-  <view class="back-btn" ontap="back">暂不登录</view>
-  <view class="login-info">
-    <text>登录即表明您同意</text> 
-    <text style="color: #E4B785;" ontap="serviceAgreement">《有播用户服务协议》</text>
+
+  <view class="content-wrap" style="margin-top: {{statusBarHeight + 100}}px">
+    <view class="title">Hi,旅行者</view>
+    <view class="sub-title">欢迎来到千岛湖！</view>
+    <view class="tips">
+      <view>旅途的意义也许不在于目的地，​</view>
+      <view>而是沿途的风景​</view>
+    </view>
+    <button class="register-btn" open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber">
+      <view>开启旅途</view>
+      <image class="arrow" src="./images/arrow.png" />
+    </button>
+    <view class="agreement-tips">
+      <text>开启旅途即表明您同意</text>
+      <text style="color: #0095fa;" ontap="serviceAgreement">《用户服务协议》</text>
+    </view>
   </view>
 </view>
 
