--- a/pages/common/register/index.wxss
+++ b/pages/common/register/index.wxss
@@ -19,44 +19,49 @@
   height: 34px;
 }
 
-.weixin-btn {
-  position: absolute;
-  left: 50%;
-  bottom: 372rpx;
-  width: 428rpx;
-  height: 76rpx;
-  transform: translateX(-50%);
-  border-radius: 38rpx;
-  color: #000;
-  font-size: 36rpx;
-  font-weight: 500;
-  text-align: center;
-  line-height: 76rpx;
-  background: linear-gradient(90deg,rgb(227,187,143) 0%,rgb(234,167,92) 100%);
+.content-wrap {
+  padding: 0 50rpx;
 }
-.back-btn {
-  position: absolute;
-  left: 50%;
-  bottom: 260rpx;
-  width: 428rpx;
-  height: 76rpx;
-  transform: translateX(-50%);
-  border-radius: 38rpx;
-  color: #fff;
-  font-size: 36rpx;
-  font-weight: 500;
-  text-align: center;
-  line-height: 74rpx;
-  border: 1rpx solid #fff;
+.title {
+  color: #333;
+  font-size: 68rpx;
+  font-weight: bolder;
+  font-family: Verdana;
 }
-.login-info {
-  position: absolute;
-  bottom: 114rpx;
-  width: 100%;
-  text-align: center;
+.sub-title {
+  color: #666;
+  font-size: 34rpx;
+  font-weight: bold;
+  font-family: Verdana;
+}
+.tips {
+  margin-top: 0.6rem;
+  color: #999;
+  font-size: 26rpx;
+}
+.register-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 80rpx;
+  margin-left: 0;
+  width: 300rpx;
+  height: 80rpx;
   color: #fff;
-  font-size: 22rpx;
-  font-weight: 400;
+  font-size: 32rpx;
+  font-weight: bold;
+  background: #0095fa;
+  border-radius: 10rpx;
+}
+.arrow {
+  margin-left: 10rpx;
+  width: 40rpx;
+  height: 40rpx;
+}
+.agreement-tips {
+  margin-top: 20rpx;
+  color: #999;
+  font-size: 24rpx;
 }
 
 .modal-mask {
