--- a/pages/common/register/index.wxss
+++ b/pages/common/register/index.wxss
@@ -65,45 +65,47 @@
 }
 
 .modal-mask {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: #3F3F3F;
+  backdrop-filter: blur(6px);
 }
+
 .modal-dialog {
-  position: fixed;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 570rpx;
   height: 542rpx;
   border-radius: 50rpx;
-  background: #1B1B1B;
+  background: rgb(4, 6, 15);
 }
 .modal-title {
-  padding-top: 44rpx;
+  padding-top: 30rpx;
   text-align: center;
 }
 .modal-content {
-  margin-top: 44rpx;
   color: #fff;
-  font-weight: 500;
   line-height: 22px;
   text-align: center;
   font-size: 28rpx;
 }
 .btn-confirm {
-  margin-top: 44rpx;
-  width: 428rpx;
-  height: 76rpx;
-  background: linear-gradient(90deg,rgba(227,187,143,1) 0%,rgba(234,167,92,1) 100%);
-  border-radius: 38rpx;
+  margin-top: 50rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 360rpx;
+  height: 80rpx;
   color: #fff;
-  font-size: 36rpx;
-  color: #1B1B1B;
-  line-height: 76rpx;
+  font-size: 32rpx;
+  font-weight: bold;
+  background: center center #4A54FF;
+  background-image: linear-gradient(315deg,#6772FF 0,#00F9E5 100%);
+  border-radius: 40rpx;
 }
 .modal-footer {
   display: flex;
