--- a/pages/common/register/index.wxml
+++ b/pages/common/register/index.wxml
@@ -11,13 +11,13 @@
       <view>旅途的意义也许不在于目的地，​</view>
       <view>而是沿途的风景​</view>
     </view>
-    <button class="register-btn" open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber">
+    <button class="register-btn" open-type="getPhoneNumber" bindgetphonenumber="getMobile">
       <view>开启旅途</view>
       <image class="arrow" src="./images/arrow.png" />
     </button>
     <view class="agreement-tips">
       <text>开启旅途即表明您同意</text>
-      <text style="color: #0095fa;" ontap="serviceAgreement">《用户服务协议》</text>
+      <text style="color: #0095fa;" bindtap="serviceAgreement">《用户服务协议》</text>
     </view>
   </view>
 
@@ -31,7 +31,7 @@
       <view>(包含头像，昵称等)</view>
     </view>
     <view class="modal-footer">
-      <button class="btn-confirm" bindtap="getUserProfile">确认授权</button>
+      <view class="btn-confirm" bindtap="getUserInfo">确认授权</view>
     </view>
   </view>
 </view>
