--- a/pages/mall/index.wxml
+++ b/pages/mall/index.wxml
@@ -1,5 +1,5 @@
 <view class="nav-bar {{navrBarActive ? 'active': ''}}" style="padding-top: {{statusBarHeight}}px">
-  <view class="search-bar {{navrBarActive ? 'active': ''}}" ontap="search">
+  <view class="search-bar {{navrBarActive ? 'active': ''}}" bindtap="search">
     <image class="search-icon" src="/images/search.png" />
     <text class="placeholder">搜索景点、酒店等</text>
   </view>
@@ -15,7 +15,7 @@
 </swiper>
 
 <view class="category-wrap">
-  <view class="category-item" wx:for="{{categoryList}}" wx:key="index" ontap="navTo" data-index="{{index}}">
+  <view class="category-item" wx:for="{{categoryList}}" wx:key="index" bindtap="navTo" data-index="{{index}}">
     <image class="category-icon" src="{{item.icon}}" />
     <view class="category-desc">{{item.name}}</view>
   </view>
