--- a/pages/mall/subpages/hotel/index.wxml
+++ b/pages/mall/subpages/hotel/index.wxml
@@ -2,9 +2,9 @@
 
 <view class="nav-bar" style="padding-top: {{statusBarHeight}}px;">
   <view class="search-bar-wrap">
-    <image class="back-icon" src="/images/back.png" ontap="navBack" />
+    <image class="back-icon" src="/images/back.png" bindtap="navBack" />
     <view class="search-bar">
-      <view class="calendar-bar" ontap="showCalendarPopup">
+      <view class="calendar-bar" bindtap="showCalendarPopup">
         <view class="calendar-item">
           <text style="color: #999;">住</text>
           <text>{{startDate}}</text>
@@ -19,16 +19,16 @@
     </view>
   </view>
   <view class="search-filter">
-    <view wx:for="{{filterList}}" wx:key="index" class="filter-item {{item.visible ? 'active' : ''}}" ontap="showDropdown" data-index="{{index}}">
+    <view wx:for="{{filterList}}" wx:key="index" class="filter-item {{item.visible ? 'active' : ''}}" bindtap="showDropdown" data-index="{{index}}">
       <text>{{(item.curIndex === 0 && item.title) ? item.title : item.options[item.curIndex]}}</text>
       <image class="filter-icon {{item.visible ? 'active' : ''}}" src="/images/arrow.png" />
     </view>
   </view>
 </view>
 
-<view class="mask" wx:if="{{DROPDOWN.visible(filterList)}}" ontap="hideDropdown"/>
+<view class="mask" wx:if="{{DROPDOWN.visible(filterList)}}" bindtap="hideDropdown"/>
 <view wx:for="{{filterList}}" wx:key="index" class="filter-options {{item.visible ? 'show' : ''}}" style="top: {{statusBarHeight + 88}}px;">
-  <view class="option" wx:for="{{item.options}}" wx:key="index" wx:for-index="_index" wx:for-item="option" ontap="selectOption" data-filter-index="{{index}}" data-option-index="{{_index}}">
+  <view class="option" wx:for="{{item.options}}" wx:key="index" wx:for-index="_index" wx:for-item="option" bindtap="selectOption" data-filter-index="{{index}}" data-option-index="{{_index}}">
     <view class="option-name {{item.curIndex === _index ? 'active' : ''}}">{{option}}</view>
     <image class="selected-icon" wx:if="{{item.curIndex === _index}}" src="/images/selected.png" />
   </view>
