--- a/pages/mall/subpages/goods/index.wxml
+++ b/pages/mall/subpages/goods/index.wxml
@@ -24,7 +24,8 @@
   </scroll-view>
 </view>
 
-
 <view class="goods-list-wrap" style="padding-top: {{statusBarHeight + 100}}px">
-  <fall-flow list="{{goodsList}}" generic:item="goods-item" />
+  <fall-flow wx:if="{{goodsList}}" list="{{goodsList}}" generic:item="goods-item" />
+  <empty-illus wx:if="{{finished && !goodsList.length}}" desc="暂无列表" />
+  <view class="no-more-tips" wx:if="{{finished && goodsList.length}}">～没有更多了～</view>
 </view>
