--- a/pages/mall/subpages/goods/index.wxss
+++ b/pages/mall/subpages/goods/index.wxss
@@ -80,3 +80,10 @@
 .goods-list-wrap {
   padding: 20rpx;
 }
+
+.no-more-tips {
+  margin-top: 36rpx;
+  color: #999;
+  font-size: 24rpx;
+  text-align: center;
+}
